[metadata]
name = lesoon-common
version = attr: lesoon_common.__version__
author = huang.jw
author_email = huangjiawen@belle.net.cn
description = A basic structure for lesoon restful application
classifiers =
    Development Status :: 1 - Start
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
python_requires = >= 3.8
include_package_data = True
zip_safe = False
install_requires =
    flask>=2.0.1
    flask-jwt-extended>=4.2.3
    flask-restful>=0.3.9
    flask-sqlalchemy>=2.5.1
    flask-marshmallow>=0.14.0
    flask-caching>=1.10.1
    flask-debugtoolbar>=0.11.0
    marshmallow-sqlalchemy>=0.26.1
    sentry-sdk[flask]>=1.1.0
    python-jose>=3.3.0
    sqlalchemy>=1.4.18
    marshmallow>=3.12.1
    werkzeug>=2.0.1
    cryptography>=3.4.7

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
    ignore::DeprecationWarning


[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
# slice notation whitespace, invalid
    E203
# import at top, too many circular import fixes
    E402
# line length, handled by bugbear B950
    E501
# bare except, handled by bugbear B001
    E722
# bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
max-complexity = 10
per-file-ignores =
# imported but unused
    */__init__.py: F401
    src/lesoon_common/model/fields.py: F401

[devpi:upload]
formats = sdist.tgz,bdist_wheel

[mypy]
files = src/lesoon_common
python_version = 3.8
show_error_codes = True
allow_redefinition = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = False


[mypy-sqlalchemy.*]
ignore_missing_imports = True

[mypy-marshmallow_sqlalchemy.*]
ignore_missing_imports = True

[mypy-flask_sqlalchemy.*]
ignore_missing_imports = True

[mypy-flask_marshmallow.*]
ignore_missing_imports = True

[mypy-flask_restful.*]
ignore_missing_imports = True

[mypy-flask_caching.*]
ignore_missing_imports = True

[mypy-cryptography.*]
ignore_missing_imports = True

[mypy-flask_jwt_extended.*]
ignore_missing_imports = True

[mypy-jose.*]
ignore_missing_imports = True

[mypy-flask_debugtoolbar]
ignore_missing_imports = True

[mypy-importlib_metadata]
ignore_missing_imports = True
