[metadata]
name = lesoon-common
version = attr: lesoon_common.__version__
author = huang.jw
author_email = huangjiawen@belle.net.cn
description = A basic structure for lesoon restful application
classifiers =
    Development Status :: 1 - Start
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
python_requires = >= 3.8
include_package_data = True
zip_safe = False
install_requires =
    cryptography>=3.4.7
    flask>=2.0.1
    flask-caching>=1.10.1
    flask-debugtoolbar>=0.11.0
    flask-jwt-extended>=4.2.3
    flask-marshmallow>=0.14.0
    flask-opentracing>=1.1.0
    flask-restful>=0.3.9
    flask-sqlalchemy>=2.5.1
    jaeger_client>=4.8.0
    kubernetes>=18.20.0
    marshmallow>=3.12.1
    marshmallow-sqlalchemy>=0.26.1
    opentracing_instrumentation>=3.3.1
    python-jose>=3.3.0
    sentry-sdk[flask]>=1.1.0
    sqlalchemy>=1.4.18
    werkzeug>=2.0.1
    marshmallow-dataclass>=8.5.3

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
    ignore::DeprecationWarning
    ignore::UserWarning

[yapf]
based_on_style = google

[devpi:upload]
formats = sdist.tgz,bdist_wheel

[mypy]
files = src/lesoon_common
python_version = 3.8
show_error_codes = True
allow_redefinition = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = False
ignore_missing_imports = True
