[metadata]
name = lesoon-common
version = attr: lesoon_common.__version__
author = huang.jw
author_email = huangjiawen@belle.net.cn
description = A Basic Web Structure For Lesoon Restful Application
keywords = Flask,SQLAlchemy,JWT
classifiers =
    Development Status :: 1 - Start
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
python_requires = >= 3.8
include_package_data = True
zip_safe = False
install_requires =
    cryptography>=35.0.0
    factory_boy>=3.2.1
    filelock>=3.6.0
    Flask_Caching>=1.10.1
    Flask_DebugToolbar>=0.12.0
    Flask_JWT_Extended>=4.2.3
    flask_marshmallow>=0.14.0
    flask_mongoengine>=1.0.0
    Flask_OpenTracing>=1.1.0
    Flask_RESTful>=0.3.9
    Flask_SQLAlchemy>=2.5.1
    jaeger_client>=4.8.0
    kubernetes>=18.20.0
    marshmallow>=3.14.0
    marshmallow_dataclass>=8.5.3
    marshmallow_enum>=1.5.1
    marshmallow_mongoengine>=0.30.2
    marshmallow_sqlalchemy>=0.26.1
    opentracing>=2.4.0
    opentracing_instrumentation>=3.3.1
    pymongo>=3.12.1
    python_jose>=3.3.0
    sentry_sdk>=1.1.0
    SQLAlchemy>=1.4.27
    Werkzeug>=2.0.1

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
    ignore::DeprecationWarning
    ignore::UserWarning

[yapf]
based_on_style = google

[devpi:upload]
formats = sdist.tgz,bdist_wheel

[mypy]
mypy_path = $MYPY_CONFIG_FILE_DIR/src
files = src/**/*.py
python_version = 3.8
show_error_codes = True
allow_redefinition = True
no_implicit_optional = True
local_partial_types = True
# no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = False
ignore_missing_imports = True

[types-setuptools.*]
ignore_missing_imports = True
